# klekit-mac

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
docs/superpowers/plans/: 2026-06-08-unified-voice-recording-and-refinement.md
docs/superpowers/specs/: 2026-06-08-unified-voice-recording-and-refinement-design.md
resources/: gemma_prompts.json  prompt_for_speak.txt
src/: audio.rs  db.rs  lib.rs  llm.rs  main.rs  os_integration.rs  settings.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
ui/: i18n.js  index.html
