[package]
name = "klekit-tauri"
version = "0.1.0"
description = "KleKit — offline voice-to-text assistant for macOS"
authors = ["mo0rych0k"]
license = "MIT"
repository = "https://github.com/mo0rych0k/klekit-mac"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
klekit = { path = ".." }
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5"
tauri-plugin-global-shortcut = "2"
once_cell = "1.19"
objc2 = "0.5.2"
block2 = "0.5.1"
objc2-app-kit = { version = "0.2.2", features = ["NSEvent", "block2"] }
arboard = "3.4"

